--- a/main.css
+++ b/main.css
@@ -54,6 +54,7 @@ table {
 }
 
 body {
+	padding: 50px;
 	font-family: sans-serif;
 	font-size: 20px;
 	text-align: center;
@@ -69,6 +70,7 @@ footer {
 h1 {
   font-size: 40px;
   font-weight: 300;
+  padding: 30px;
 }
 
 h2 {
