--- a/main.css
+++ b/main.css
@@ -48,6 +48,8 @@ table {
 }
 
 /****** end of reset ******/
+/*font-family: 'Poiret One', cursive;
+font-family: 'Roboto', sans-serif;*/
 
 * {
 	box-sizing: border-box;
@@ -55,9 +57,11 @@ table {
 
 body {
 	padding: 50px;
-	font-family: sans-serif;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 200;
 	font-size: 20px;
-	text-align: center;
+	/*text-align: center;*/
+
 }
 
 header,
@@ -65,37 +69,50 @@ nav,
 main,
 footer {
 	margin: 0 auto;
+	text-align: center;
 }
 
 h1 {
   font-size: 40px;
-  font-weight: 300;
+  /*font-weight: 300;*/
   padding: 30px;
+  font-family: 'Poiret One', cursive;
+  text-transform: uppercase;
 }
+
 
 h2 {
 	font-size: 30px;
 	padding: 30px;
+	text-align: center;
+	/*color: #8F6D6B;*/
 }
 
 nav,
 footer {
 	padding: 20px;
-	background: darkgray;
+	/*color: #8F6D6B;*/
+	/*background: darkgray;*/
 }
 
-.grey-box {
-	width: 200px;
-	height: 200px;
-	background: gray;
-	color: #fff;
-	margin: 20px auto;
-	padding: 90px 0;
+ul li {
 	display: inline-block;
+	min-width: 150px;
+}
+
+.img-wrapper {
+	width: 100%;
+}
+
+img {
+	margin: 0 auto;
+	width: 200px;
+	display: block;
 }
 
 section {
-	height: 400px;
+	/*height: 400px;*/
 	margin: 20px auto;
-	background-color: lightgray;
+	text-align: left;
+	/*background-color: lightgray;*/
 }
