--- a/main.css
+++ b/main.css
@@ -49,9 +49,6 @@ table {
 
 /****** end of reset ******/
 
-/*font-family: 'Poiret One', cursive;
-font-family: 'Roboto', sans-serif;*/
-
 * {
 	box-sizing: border-box;
 }
@@ -103,7 +100,7 @@ ul li {
 	display: block;
 	min-width: 150px;
 	background: #FFF3F2;
-	margin: 5px 0;
+	margin: 5px;
 	padding: 10px;
 	border: 2px solid #FFF3F2;
 }
@@ -114,12 +111,6 @@ ul li:focus {
 	border: 2px solid #DCBEBC;
 	cursor: pointer;
 }
-
-/*ul li:hover a,
-ul li:active a,
-ul li:focus {
-	border-bottom: 2px solid #5D8F71;
-}*/
 
 nav,
 footer {
@@ -133,14 +124,30 @@ footer {
   font-weight: 200px;
 }
 
-
 section {
 	margin: 20px auto;
 	text-align: left;
 }
 
+p {
+	line-height: 32px;
+}
+
+img {
+	margin: 0 auto;
+	display: block;
+}
+
+
+a {
+	text-decoration: none;
+	color: #555;
+}
+
 .headline {
 	padding-top: 30px;
+	line-height: 42px;
+	font-size: 26px;
 }
 
 .about-container,
@@ -148,29 +155,19 @@ section {
 .projects-wrapper {
 	display: flex;
 	flex-direction: column;
-	transition: 5s all;
+	/*transition: s all;*/
+}
+
+.header-wrapper {
+	transition: 250ms all;
 }
 
 .projects-wrapper {
 	margin: 30px 0;
 }
 
-.bio-text-wrapper {
-	width: 100%;
-	display: block;
-	padding: 20px;
-}
-
-p {
-	line-height: 32px;
-}
-
 .intro-screen h1 {
-	font-size: 50px;
-}
-
-.intro-screen .img-wrapper img {
-	width: 300px
+	font-size: 40px;
 } 
 
 .img-wrapper {
@@ -196,22 +193,18 @@ p {
 	margin: 10px;
 }
 
-img {
-	margin: 0 auto;
-	display: block;
-}
-
 .project-text-wrapper {
 	margin: 0 auto;
-	padding: 30px;
+	padding: 20px;
 }
 
 .project-text-wrapper a {
 	background: #FFF3F2;
 	padding: 10px;
 	color: #000;
-	margin: 0 auto;
-	border: 2px solid #FFF3F2
+	margin: 5px auto;
+	border: 2px solid #FFF3F2;
+	display: block;
 }
 
 .project-text-wrapper a:hover,
@@ -221,13 +214,18 @@ img {
 }
 
 .bio-img-wrapper {
-	width: 40%;
 	padding: 20px;
 }
 
 .bio-img-wrapper img {
 	max-width: 100%;
 	max-height: 400px;
+}
+
+.bio-text-wrapper {
+	width: 100%;
+	display: block;
+	padding: 20px;
 }
 
 .contact-wrapper li {
@@ -245,19 +243,19 @@ span.contact-label {
 	padding: 30px;
 }
 
-a {
-	text-decoration: none;
-	color: #555;
-}
-
-/*.header-wrapper a:hover,
-.header-wrapper a:active,
-.header-wrapper a:focus {
-	color: #5D8F71;
-	border-bottom: 2px solid #5D8F71;
-}*/
-
 @media screen and (min-width: 850px) {
+	.intro-screen h1 {
+		font-size: 50px;
+	}
+
+	.intro-screen .img-wrapper img {
+    width: 300px;
+	}
+
+	.headline {
+		font-size: 30px;
+	}
+	
 	.project-text-wrapper {
 		width: 40%;
 		padding: 0;
@@ -273,18 +271,41 @@ a {
 		justify-content: space-around;
 	}
 
+	.about-container {
+		margin: 20px 30px;
+	}
+
 	.projects-wrapper.reverse {
 		flex-direction: row-reverse;
 	}
 
 	.bio-text-wrapper {
 		width: 65%;
+		padding: 20px;
+	}
+
+	.project-text-wrapper {
+		padding: 30px;
+	}
+
+	.project-text-wrapper a {
+		display: inline-block;
 	}
 
 	ul li {
 		display: inline-block;
 		background: transparent;
 		border: 2px solid transparent; 
+	}
+
+	.bio-img-wrapper {
+		width: 40%;
+	}
+
+
+@media screen and (min-height: 1150px) {
+	header {
+		padding-top: 10vh;
 	}
 }
 
